--- a/wp-content/plugins/modula-best-grid-gallery/changelog.txt
+++ b/wp-content/plugins/modula-best-grid-gallery/changelog.txt
@@ -1,3 +1,13 @@
+= 2.2.3 - 06.01.2020 =
+Fixed Autoptimize HTML code optimization bug
+Fix warning for no uploaded image
+
+= 2.2.2 - 31.12.2019 =
+Fixed rate pop-up
+
+= 2.2.1 - 31.12.2019 =
+Fixed Gutenberg block
+
 = 2.2.0 - 19.12.2019 =
 Added schema-data to gallery code
 Added image limit view to gallery list
